<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Change"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.464"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.089"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="210dp"
        android:layout_height="154dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomof="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartof="parent"
        app:layout_constraintTop_toBottomof="@+id/textView"
        app:layout_constraintVertical_bias="0.125"
        tools:ignore="MissingConstraints">
    <RadioButton
        android:id="@+id/radio0"
        android:layout_width="wrap_content"
        android:layout_height="wrap content"
        android:text="@string/menit"
        tools:layout_editor_absoluteX="70dp"
        tools:layout_editor_absoluteY="180dp" />

    <RadioButton
        android:id="@+id/radio1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menit5"
        tools:layout_editor_absoluteX="33dp"
        tools:layout_editor_absoluteY="204dp" />

    <RadioButton
        android:id="@+id/radio2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menit30"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="214dp" />

    <RadioButton
        android:id="@+id/radio3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jam"
        tools:layout_editor_absoluteX="33dp"
        tools:layout_editor_absoluteY="236dp" />
    </RadioGroup>

    <Button
        android:id="@+id/btnSet"
        android:layout_width="218dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="160dp"
        android:text="@string/Set"
        app:layout_oonstraintBottom_toBottomof="parent"
        app:layout_oonstraintEnd_toEndof="parent"
        app:layout_constraintHorizontal_bias="0.519"
        app:layout_constraintStart_tostartof="parent"
        app:layout_oonstraintTop_toBottomof="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.568" />

    <Button
        android:id="@+id/btnUnset"
        android:layout_width="218dp"
        android:layout_height="wrap contant"
        android:1ayout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottome="152dp"
        android:text="@string/Unset"
        app:layout_constraintBottom_toBottomof="parent"
        app:layout_constraintEnd_toEndof="parent"
        app:layout_constraintHoriEontal_bias="0.519"
        app:layout_constraintStart_tostartOf="parent"
        app:layout_constraintTop_toBottamor="e+id/btnSet"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>